# AutoDetect

./: LICENSE  README.md  pyproject.toml
src/autodetect/: __init__.py  ad_predict.py  auto_detect.py
